--- a/src/accounts/templates/accounts/about.html
+++ b/src/accounts/templates/accounts/about.html
@@ -8,11 +8,17 @@ h1, h2, a {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sans-se
   rel="stylesheet"
 />
 {% endblock %} 
-{% block title %}Home{% endblock title %} 
+{% block title %}About{% endblock title %} 
 {% block content %}
-<div class="w-full h-full flex flex-col items-center content-center p-4 gap-y-4">
+<div class="w-full h-fit flex flex-col items-center content-center p-4 gap-y-4">
     <img class="mt-8 border-4 border-slate-800 dark:border-slate-100 w-1/6" src="{{profile_picture.url}}" alt="{{profile_picture.alt}}"/>
     <h2 class="text-4xl">{{ user.name }}</h2>
     <div class="text-lg w-1/2 flex flex-col gap-y-3 indent-4">{{ user.bio | linebreaks }}</div>
+    <h2 class="text-4xl">Photos</h2>
+    <div class="grid grid-cols-4 gap-4 w-4/6">
+      {% for photo in photos %}
+        <img src="{{photo.url}}" alt="{{photo.alt}}" class="border-2 border-slate-800 dark:border-slate-100 object-cover aspect-square	"/>
+      {% endfor %}
+    </div>
 </div>
 {% endblock content %}
