--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -33,15 +33,15 @@
         <a href="/"><h1 class="text-2xl">Townsley</h1></a>
         <div class="text-xl">
             <a href="/users/about">About</a> •
-            <a href="#">Comic</a>
+            <a href="/comic">Comic</a>
         </div>
     </header>
 {% block content %} 
   
 
 {% endblock content %}
-<footer class="w-full sticky-bottom flex flex-row justify-center px-4 py-2 border-t-2 border-slate-800 dark:border-slate-100">
-   <span>A DoubleL Studio creation, made in beautiful Wilmington, North Carolina | <a href="/admin">Log In</a></span>
+<footer class="w-full static bottom-0 flex flex-row justify-center px-4 py-2 border-t-2 border-slate-800 dark:border-slate-100">
+   <span>A <a class="text-emerald-500 hover:text-emerald-700 font-normal" href="https://sethangell.com">DoubleL Studio</a> creation from beautiful Wilmington, North Carolina | <a href="/admin">Cole? Click here</a></span>
 </header>
 
 </body>
