--- a/src/comic/templates/comic/home.html
+++ b/src/comic/templates/comic/home.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %} {% load static %}
 {% block style %} 
-h1, h2, a {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sans-serif; } 
+h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sans-serif; } 
 {%endblock %} {% block font %}
 <link
   defer
