--- a/src/comic/templates/comic/comic.html
+++ b/src/comic/templates/comic/comic.html
@@ -10,7 +10,7 @@ h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sa
 {% endblock %} 
 {% block title %}Home{% endblock title %} 
 {% block content %}
-<div id='desktop-full-screen' class='hidden relative z-20'>
+<div id='desktop-full-screen' class='hidden fixed z-20'>
     {% include '_desktop-full-screen.html' %}
 </div>
 <div id='mobile-full-screen' class='hidden absolute top-0 z-20'>
@@ -27,7 +27,7 @@ h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sa
         {% for scene in volume.scenes %}
         <div class="flex flex-col items-center content-center gap-y-4" id="volume-{{volume.id}}-scene-{{scene.id}}">
             {% for page in scene.pages %}
-            <img class="flex flex-col items-center content-center w-4/5 lg:w-1/2 gap-y-2 border-4 md:border-8  border-slate-800 dark:border-slate-100 focus:border-slate-600 dark:focus:border-slate-300" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
+            <img class="flex flex-col items-center content-center w-4/5 gap-y-2 border-4 md:border-8  border-slate-800 dark:border-slate-100 focus:border-slate-600 dark:focus:border-slate-300" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
             {% endfor %}
         </div>
         {% endfor %}
