--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -19,7 +19,8 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    {% if debug %} <script src="https://cdn.tailwindcss.com"></script>  {% else %} <link rel="stylesheet" href="{% static "css/tailwind-output.css" %}">  {% endif %}
+    <script src="https://cdn.tailwindcss.com"></script>
+    {% if debug %}   {% else %} <link rel="stylesheet" href="{% static "css/tailwind-output.css" %}">  {% endif %}
     <link
     defer
     href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Karla&family=Rubik:wght@500;700&display=swap"
