--- a/src/comic/templates/comic/comic.html
+++ b/src/comic/templates/comic/comic.html
@@ -13,21 +13,21 @@ h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sa
 <div id='desktop-full-screen' class='hidden fixed z-20'>
     {% include '_desktop-full-screen.html' %}
 </div>
-<div id='mobile-full-screen' class='hidden absolute top-0 z-20'>
+<div id='mobile-full-screen' class='hidden absolute top-0 z-40'>
     {% include '_mobile-full-screen.html' %}
 </div>
 <div class="relative w-full h-fit flex flex-col items-center content-center p-4 gap-y-4">
-    <h1 class="text-2xl w-5/6 md:text-6xl md:w-1/2 text-center">{{project.name}}</h1>
+    <h1 class="text-4xl w-5/6 md:text-6xl md:w-1/2 text-center">{{project.name}}</h1>
     {% if home == False %}
     <div class="text-md w-5/6 md:text-lg md:w-1/2 flex flex-col gap-y-3 indent-4">{{ project.description | linebreaks }}</div>
     {% endif %}
     {% for volume in project.volumes %}
     <div class="flex flex-col items-center content-center gap-y-4">
-        <h2 id="volume-{{volume.id}}" class="w-1/2 text-4xl">{{volume.name}}</h3>
+        <h2 id="volume-{{volume.id}}" class="w-11/12 text-2xl md:w-1/2 md:text-4xl">{{volume.name}}</h3>
         {% for scene in volume.scenes %}
-        <div class="flex flex-col items-center content-center gap-y-4" id="volume-{{volume.id}}-scene-{{scene.id}}">
+        <div class="flex flex-col items-center content-center gap-y-4 w-11/12 md:w-4/5" id="volume-{{volume.id}}-scene-{{scene.id}}">
             {% for page in scene.pages %}
-            <img class="flex flex-col items-center content-center w-4/5 gap-y-2 border-4 md:border-8  border-slate-800 dark:border-slate-100 focus:border-slate-600 dark:focus:border-slate-300" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
+            <img class="flex flex-col items-center content-center w-full md:w-4/5 gap-y-2 border-4 md:border-8  border-slate-800 dark:border-slate-100 focus:border-slate-600 dark:focus:border-slate-300" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
             {% endfor %}
         </div>
         {% endfor %}
