--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -49,8 +49,7 @@
                 </div>
             </div> •
             {% endif %}
-            <a href="/users/about">About</a> •
-            <a href="/comic">Comic</a>
+            <a href="/users/about">About</a>
         </div>
     </header>
 
@@ -59,7 +58,7 @@
 
 {% endblock content %}
 <footer class="w-full static bottom-0 flex flex-col text-center md:gap-x-2 items-center md:flex-row justify-center px-4 py-2 border-t-2 border-slate-800 dark:border-slate-100">
-   <span>A <a class="text-green-500 hover:text-green-800 font-normal" href="https://doublel.studio">DoubleL Studio</a> creation from beautiful Wilmington, North Carolina</span>
+   <span>A <a class="text-green-500 hover:text-green-800 font-normal" href="https://doublel.studio">DoubleL Studio</a> website from beautiful Wilmington, North Carolina</span>
    {% if not user.is_authenticated %}
    <span class="hidden md:block"> | </span> 
    <a href="/admin">Cole? Click here</a>
