--- a/src/comic/templates/comic/comic.html
+++ b/src/comic/templates/comic/comic.html
@@ -1,6 +1,5 @@
 {% extends "_base.html" %} {% load static %}
 {% block style %} 
-h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sans-serif; } 
 {%endblock %} {% block font %}
 <link
   defer
@@ -23,15 +22,14 @@ h1, h2, a, div {font-family: 'Rubik', sans-serif; } p { font-family: 'Karla', sa
 <div id='mobile-full-screen' class='hidden absolute top-0 z-40'>
     {% include '_mobile-full-screen.html' %}
 </div>
-<div class="relative w-full h-fit flex flex-col items-center content-center p-4 gap-y-4">
-    <h1 class="text-4xl w-5/6 md:text-6xl md:w-1/2 text-center">{{project.name}}</h1>
+<div class="relative w-full h-fit flex flex-col items-center content-center p-4 pt-12 gap-y-4">
     {% for volume in project.volumes %}
     <div class="flex flex-col items-center content-center gap-y-4">
-        <h2 id="volume-{{volume.id}}" class="w-11/12 text-2xl underline underline-offset-8 md:w-1/2 md:text-4xl">{{volume.name}}</h2>
+        <h2 id="volume-{{volume.id}}" class="w-11/12 text-2xl md:w-1/2 md:text-4xl">{{volume.name}}</h2>
         {% for scene in volume.scenes %}
         <div class="flex flex-col items-center content-center gap-y-4 w-11/12 md:w-1/2" id="volume-{{volume.id}}-scene-{{scene.id}}">
             {% for page in scene.pages %}
-            <img class="flex flex-col items-center content-center w-full gap-y-2 border-4 md:border-8  border-slate-800 dark:border-slate-100 focus:border-slate-600 dark:focus:border-slate-300" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
+            <img class="flex flex-col items-center content-center w-full gap-y-2 border-4 md:border-8  border-slate-800" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
             {% endfor %}
         </div>
         {% endfor %}
