--- a/src/comic/templates/comic/comic.html
+++ b/src/comic/templates/comic/comic.html
@@ -29,11 +29,13 @@
         {% for scene in volume.scenes %}
         <div class="flex flex-col items-center content-center gap-y-4 w-11/12 md:w-1/2" id="volume-{{volume.id}}-scene-{{scene.id}}">
             {% for page in scene.pages %}
-            <img class="flex flex-col items-center content-center w-full gap-y-2 border-4 md:border-8  border-slate-800" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
+            <img class="flex flex-col items-center content-center w-full gap-y-2 border-4 md:border-8  border-gray-800" src="{{page.url}}" alt="{{page.alt}}" data-url='{{page.url}}' onclick="handleImageClick('{{page.url}}')" onkeydown="handleImageKeyboardEvent(event)" tabindex="0"/>
             {% endfor %}
         </div>
         {% endfor %}
     </div>
+    <a href="{{comic_url}}" class="mt-2 p-2 border-2 border-gray-800 hover:bg-gray-800 focus:bg-gray-800 hover:text-gray-50 focus:text-gray-50" target="blank">Want your own copy of Townsley? Click Here!</a>
+
     {% endfor %}
     {{project|json_script:"projectData"}}
         <script>
